@@ -143,6 +143,11 @@ class _InstanceProxy(object):
         """Fetch the underlying instance from the cache if necessary and
         return the attribute value it has.
         """
+        if name in ['_as_sql', 'as_sql', 'evaluate', 'get_compiler',
+                'get_placeholder', '__iter__', 'next', '_prepare', 'prepare',
+                'prepare_database_save', 'value_annotation']:
+            # These are attributes that we will never have
+            raise AttributeError(name)
         return getattr(self._fetch_instance(), name)
 
     def __setattr__(self, name, value):
